Update Swagger add get endpoint Update controller and service to fail if not found
